--- a/gb/ncid280_2.md
+++ b/gb/ncid280_2.md
@@ -8,7 +8,7 @@
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/4/n11701064.md#1" target="_blank">习近平6年“脱贫”期限近 各地政府忙造假</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/4/n11701064.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/fupin-150x120.jpg" align ="left"></a>中共总书记习近平曾提出“2020年全民脱贫”的政纲，然而2020年将至，许多地方干部恐惧因无法达到要求遭到问责，而纷纷演戏造假。所谓2020年消灭绝对贫困人口，是否梦一场呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 7:43 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/4/n11701183.md#1" target="_blank">中共强推“清洁煤” 致6人死亡 数十人住院</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/4/n11701183.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/12/84ba374e317fd1b46d0d1b913852bbad-600x400-150x120.jpg" align ="left"></a>中共当局此前推行的“煤改气”工程并禁止农户烧煤的强制性政策备受舆论诟病。近期，中共当局再出新规，在农村地区强制推广“清洁煤”，致6位村民因一氧化碳中毒死亡，此外还有数十人住院治疗。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 6:45 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/4/n11700806.md#1" target="_blank">浙江污水罐倒塌致9死 亲历者讲逃生经过</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/4/n11700806.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/VCG111262083423-150x120.jpg" align ="left"></a>12月3日17时19分许，浙江海宁市龙洲印染有限责任公司发生污水罐体坍塌，冲击力致附近的车间引发倒塌。罐体坍塌后砸中一蒸气管，导致爆炸起火。官方称，截止4日上午，共9人死亡，15人受伤。其中4人重伤，仍未脱离生命危险。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 1:40 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/13/n11720210.md#1" target="_blank">经常接触生禽无防护 湖南菜场小贩染布病</a><br></h3>继中国农科院兰州兽医研究所至少96人被感染布鲁氏菌病（布病）、哈尔滨兽医研究所13名学生感染布病后，湖南永州一菜场小贩也被发现感染布病。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 4:24 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/4/n11698908.md#1" target="_blank">浙江一印染厂污水罐倒塌 致9死4重伤</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/4/n11698908.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/VCG111262085163-150x120.jpg" align ="left"></a>昨日（3日）17时19分许，浙江海宁市许村镇龙洲印染有限公司污水罐爆炸，导致货架倒塌，截止4日凌晨，共救出22人，其中7人死亡。据悉该涉事印染公司曾多次遭到行政处罚。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 10:07 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/12/n11717219.md#1" target="_blank">山东90后男子救轻生女双双遇难</a><br></h3>12月11日晚7时后，在杭州下沙街道幸福南路东海橙郡小区附近的一座桥上，一名安徽籍高中女生轻生坠入河中。随后当场有一90后山东男生路过，于是跳入河中救此女孩。但两人均遇难。大陆网民纷纷赞赏男子见义勇为的精神，但也为之惋惜。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 12:32 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/12/12/n11717137.md#1" target="_blank">辽宁抚顺石油二厂突发大火 火光冲天</a><br></h3>12月11日晚，辽宁省抚顺市搭连桥东侧抚顺石油二厂突发大火。失火原因不明。
 
