--- a/gb/ncid281_5.md
+++ b/gb/ncid281_5.md
@@ -28,7 +28,7 @@
 .........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月11日 8:50 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/6/9/n11310838.md#1" target="_blank">教育界专家解析大陆高考作文题目（上）</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/6/9/n11310838.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/CFP468504079@1200x1200-600x400-150x120.jpg" align ="left"></a>今年语文高考作文题浓郁的政治味引来网民热议。业界专家批评，中共一如既往用党文化禁锢年轻学子，中国传统文化丧失殆尽。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月10日 9:33 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/6/7/n11307342.md#1" target="_blank">2019大陆高考作文题目飘政治味 网民嘲讽</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/6/7/n11307342.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/1406091300102639-150x120.jpg" align ="left"></a>今年大陆高考作文题目被指政治味浓，作文题目聚焦时事、历史上，内容包括2020年北京冬奥、五四运动等。有网民表示，今年的高考作文根本是政治论文，怕写的太真实被请去喝茶。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月08日 12:55 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/6/5/n11303089.md#1" target="_blank">为捐骨髓救母 河北17岁少女放弃高考　</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/6/5/n11303089.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/a9238fea-c791-4a0d-9565-6510576933bd-150x120.png" align ="left"></a>大陆一年一度的高考将于7日开考，但河北衡水市阜城中学的高三学生赵思琦却选择弃考，她必须捐出自己的骨髓为身患急性白血病的母亲做移植手术。她说， “高考可以重来，妈妈的生命只有一次！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月06日 5:37 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/7/22/n11401219.md#1" target="_blank">中共新疆白皮书被批用谎言编造历史</a><br></h3>继近期国际社会严厉批评中共新疆政策后，中共当局21日发布《新疆的若干历史问题》白皮书进行诡辩，随后遭到“世界维吾尔代表大会”炮轰。另有媒体披露，中共还删除了小学教科书中关于新疆维吾尔人等文章。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月22日 5:05 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/7/15/n11386237.md#1" target="_blank">家庭投入的无底洞 北大教授批教育双轨制</a><br></h3>在近日北京大学举办的论坛上，北大教授渠敬东指出了现行教育体制的一系列问题，学生的身体健康，心理健康堪忧，而教育双轨制更成了家庭资源无限投放的无底洞。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月16日 3:04 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/6/25/n11344314.md#1" target="_blank">非法办学 深圳一高收费幼儿园现发臭猪肉</a><br></h3>近日，深圳龙岗某幼儿园厨房被发现有发臭的猪肉。据悉，该幼儿园不仅收费高，而且系非法办学。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月25日 3:34 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/6/24/n11343721.md#1" target="_blank">《少年的你》上映前夕被撤档 疑涉敏感内容</a><br></h3>原定于6月27日在大陆上映的电影《少年的你》被撤档。该片今年二月曾入围柏林电节，但电影节开幕前夕却突然宣布无法参加影展。外界质疑影片有反映校园欺凌和校园暴力现象，可能因影响了中国学校的形象，所以没过审查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月25日 6:18 AM							</td></tr>
