--- a/gb/nf3046_4.md
+++ b/gb/nf3046_4.md
@@ -13,6 +13,8 @@
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/8/7/n11436959.md#1" target="_blank">一位中国老太在欧洲不平凡的20年（下）</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/8/7/n11436959.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/f04334acc2f7f6640bab6c1a76a7987b-150x120.jpg" align ="left"></a>瑞士伯尔尼法轮功学员潘淑珍在卢塞恩景点劝中国游客三退的故事。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月23日 12:36 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/8/13/n11449390.md#1" target="_blank">网民白宫请愿连署：将中共定为恐怖组织</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/8/13/n11449390.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/CCP-150x120.jpg" align ="left"></a>有鉴于香港局势恶化、港警暴力升级，有民众在美国白宫请愿网站“我们人民”（We the People）发起征签活动，要求美国政府正式将幕后黑手中国共产党定为恐怖组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月20日 1:00 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/8/13/n11450650.md#1" target="_blank">白宫请愿连署  将中共定为恐怖组织</a><br></h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/8/13/n11450650.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/9ca38853a9d3c7fedfdac1e3ab308a9e-150x120.png" align ="left"></a>有鉴于香港局势恶化、港警暴力升级，有民众在美国白宫请愿网站“我们人民”（We the People）发起征签活动，要求美国政府正式将幕后黑手中国共产党定为恐怖组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月20日 12:30 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/9/19/n11531343.md#1" target="_blank">每日三退声明精选（2019/09/18）</a><br></h3>作为华为员工，我糊里糊涂加入了中国共产党。我看到华为专门监控老百姓，太坏了。现声明退出邪恶的中国共产党。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月19日 11:21 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/9/18/n11528820.md#1" target="_blank">每日三退声明精选（2019/09/17）</a><br></h3>作为在中国长大的小孩，我小时候也糊里糊涂加入了少先队和共青团。甚至我还曾经对共匪歪曲事实的过往“光辉历史”宣传深信不疑，真心认为过去的的所谓“革命先烈”是好的，只是掌权后人心变坏了。我越长大越认识到这是一个黑白颠倒的社会，自由和公义在这里被践踏，奴役和奸诈却是无处不在。但我不知道为什么会这样。所有人都告诉我，这很正常，哪里都一样，你要长大要适应社会，而不是让.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月18日 11:26 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/9/16/n11524267.md#1" target="_blank">每日三退声明精选（2019/09/15）</a><br></h3>我是一名新疆人，了解中共利用集中营等方式对新疆人的严重迫害情况。通过了解真相，我也知道了中共对法轮功的残酷迫害，其中活摘器官就是其残忍的迫害手段之一。一直以来中共都在利用着各种政治运动迫害中国人，在思想意识上进行强化洗脑教育，摧残和毁灭他们的灵魂和肉体，手段极为残忍、邪恶，纵观这段历史，这个邪党对中国人所犯下的滔天罪恶，真是罄竹难书。由此可见中共不仅仅是一个.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月16日 11:36 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/9/13/n11519642.md#1" target="_blank">每日三退声明精选（2019/09/13）</a><br></h3>我父亲的钢厂已被共匪拿走，明真相，今天我，郝亮丽（化名）声明退出中共共青团、少先队，特此证明。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月14日 12:37 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/9/13/n11518121.md#1" target="_blank">每日三退声明精选（2019/09/12）</a><br></h3>我是几十年的中共党员，看见现在大陆无官不贪，官民待遇极不公平，对这个党看清了！而且我相信佛在心中，所以也要退出这个无神论的组织。特让我女儿帮我退出我加入过的党团队组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月13日 10:36 AM							</td></tr>
@@ -38,7 +40,5 @@
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/8/16/n11456698.md#1" target="_blank">每日三退声明精选（2019/08/15）</a><br></h3>年轻的时候因为在大陆的关系被中共所蒙骗。后来自己上高中的时候和出来留学的时候分别接触了翻墙和大纪元。在初中的时候发生了一些事情，让我觉得对中共十分失望。后来看到了一些历史真相和九评以及终极目的两书后，更加明白中共和共产邪说是不可能改变的，再加上最近香港发生的中共对港镇压，于是对中共彻底绝望。今天刚好在国外，决定趁这个机会，退出中共党团队，不再被这个邪恶带到沟.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月16日 11:13 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/8/15/n11454054.md#1" target="_blank">每日三退声明精选（2019/08/14）</a><br></h3>从来没想过加入党员。团员也刚开始教过团费，少先队倒是红领巾天天带了，刚开始还有点好感，团员期懵懂，直到看到8964，法轮功，彻底醒悟。后学会翻墙看到《伪火》片，眼眶湿润，从此坚决拒绝洗脑，追求真相，同时扩散伪火此片，效果颇佳，感谢法轮功。我，不离，和我的妻子不弃，在此郑重声明，退出中共少先队、共青团等中共邪党相关组织，迎接美好的未来。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月15日 11:21 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/8/14/n11451801.md#1" target="_blank">每日三退声明精选（2019/08/13）</a><br></h3>家里三代人受共产党迫害，两代祖辈走眼为共产党服务，得一时荣光，终惨遭毒手不得善终，被杀人者所谓“平反”简直是天大笑话和耻辱；父辈作为“黑崽子”在阴影下长大，受共党洗脑而怒魔上身，其中亦有天赋异禀得志者移民香港，待到年老时却仍然难逃魔掌；我辈从小便知共党之淫邪，却未能在求学路上经受住师长劝说而误入歧途，乃人生一大黑点，幸而内心从未跟随始终保持距离。本人在王立军.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月14日 11:32 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/8/13/n11449414.md#1" target="_blank">每日三退声明精选（2019/08/12）</a><br></h3>罪恶的中共，安排黑恶势力假扮香港民众，打砸烧，录成视频回国在各大视频网站播放，评论无一不是毛左评论，均支持中共武力镇压。中共在深圳集结坦克，意在屠杀我香港同胞，可惜我香港同胞没有武装，以血肉之躯对抗坦克子弹，极是痛心，三反五反，十年文革，六四学潮，西藏问题，迫害法轮功，新疆改造营，无一不是中共一手制造的，面对如此邪恶组织，我宣誓三退，永远退出此邪恶组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月13日 12:31 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/19/8/12/n11447869.md#1" target="_blank">每日三退声明精选（2019/08/11）</a><br></h3>这些天在海外出差，看到香港的很多情况，也通过海外的互联网，包括《九评》和《共产主义的终极目的》看到了中共一直想掩藏的很多历史真相，包括其意识形态背后的撒旦黑教根源，中共历史上的通敌罪行，以及背后的仇恨和挑动仇恨。想起年轻的时候自己被欺骗过的事儿，就很难受，不想再提。我是信奉基督的，就在这里趁这个机会退出中共党团队。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月12日 6:39 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/dueiwa2503/djy/blob/master/gb/nf3046_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/nf3046.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/nf3046_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/nf3046_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/nf3046_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/nf3046_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/nf3046_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/nf3046_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/nf3046_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/nf3046_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/dueiwa2503/djy/blob/master/gb/nf3046_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/dueiwa2503/djy/blob/master/gb/nf3046_4.md#1<br><a href="https://github.com/dueiwa2503/djy/blob/master/gb/nf3046_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/dueiwa2503/djy/blob/master/gb/nf3046_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nf3046_4.htm">http://www.epochtimes.com/gb/nf3046_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
