--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -26,7 +26,7 @@
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/9/2/n11493215.md#1" target="_blank">【医案】我性本明</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/9/2/n11493215.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1609281625492483-150x120.jpg" align ="left"></a>针灸治疗1个月后，女主管精神好很多，工作忙也不那么疲倦。但每次来诊都赶最后一班针灸，到诊时都是满脸倦容，我问女主管：“你刚下班啊？忙到那么晚！”她说她下班以后，去参加各种活动，每天把时间塞满，把精力耗光，等晚上10点回到家，累垮就睡了。冷不防，我一针见血就说：“你在逃避孤独、寂寞？你不想面对你自己！”女主管顿时傻眼！低.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 10:02 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/19/n11731627.md#1" target="_blank">神鸽守金库 官员杀鸽毁巢遭报应</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/19/n11731627.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/7cad2b1ea5bfc59b6837390e9c433938-150x120.jpg" align ="left"></a>鸽子有灵吗？，有一件发生在清代甘肃布政司（藩司）的事情作了实证，万物有灵不得不信。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 9:56 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/19/n11731877.md#1" target="_blank">天地清明引(145) 东流水－君臣生隙1</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/19/n11731877.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/07/1207040111051680-150x120.jpg" align ="left"></a>金府。楚淮阳禀报：“已按老爷吩咐，放出风去，言金府高价收购药草。但是现下大疫正盛，百姓手中但有草药，皆留置自用，无人肯售。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 8:00 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/25/n11745115.md#1" target="_blank">唐浩：香江预</a><br></h3>恶法连连无底线   邪丑癫狂舞黑剑   众业缠身妖自焚   红霾消溃故园现......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 12:11 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/19/n11733023.md#1" target="_blank">占星解析香港独立是反送中运动的最终结果</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/19/n11733023.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912111840131538-150x120.jpg" align ="left"></a>从2019年6月开始爆发的香港反送中运动是今年最大的新闻，也是空前而绝后的新闻，是世界民主和人权运动史上光辉的一页。运动至今仍在继续着，很多可歌可泣的青年人的表现和大部分港人不屈不挠、和平、理性、互助且又毫不畏惧强权的精神令人赞叹不已。香港的荣光是在提醒着全世界三十年前那场惨绝人寰的大屠杀的刽子手依然是杀人者和欺骗者.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 2:47 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/25/n11745238.md#1" target="_blank">五律：酒（二）</a><br></h3>此来亲道骨，何去带仙风。
 一醉云霄外，九升天地中。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 10:55 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/24/n11742891.md#1" target="_blank">唐浩：末战</a><br></h3>正邪决战末戏演   香江烽火漫连天   善扬德胜败恶堕   传奇永铭凌霄巅......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 11:25 AM			</td></tr>
